# search-dragon

./: MANIFEST.in  README.md  annotations.csv  pyproject.toml  search.csv
docs/: README.md  _navbar.md  index.html
docs/design/: descendants-details.md  descendants.md  descendants.yaml
src/search-dragon/: common.py  filters.py  result_structure.py  search.py  sources.py  utils.py
src/search-dragon/sources/: __init__.py
src/search_dragon/: __init__.py  _version.py  curate_combined_data.py  result_structure.py  search.py
src/search_dragon/external_apis/: __init__.py  ols_api.py  ols_code_api.py  ols_descendants_api.py  umls_api.py
src/search_dragon/sources/: __init__.py  ols_api.py
src/search_dragon/support/: __init__.py
