[build-system]
requires = ["setuptools"] #, "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "search-dragon"
authors = [
    {name = "Brenda Gutman", email="brenda.gutman@vumc.org"}
]
description = "Unified API Interface for ontology search APIs."
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "requests",
    "importlib_resources"
]
version="v2.0.2"

# dynamic = ["version"]
# [tool.setuptools_scm]
# version_file = "src/search-dragon/_version.py"

[tool.setuptools.packages.find]
where = ["src"]  # list of folders that contain the packages (["."] by default)

[tool.setuptools.package-data]
csv_files = ["*.csv"]

[project.scripts]
dragon_search="search_dragon.search:exec"